--- a/custom_components/ui_lovelace_minimalist/lovelace/ulm_templates/card_templates/cards/card_navigate.yaml
+++ b/custom_components/ui_lovelace_minimalist/lovelace/ulm_templates/card_templates/cards/card_navigate.yaml
@@ -15,7 +15,7 @@ card_navigate:
     icon:
       - color: >
           [[[
-            let color = variables.ulm_card_navigate_colour;
+            let color = variables.ulm_card_navigate_color;
             return "rgba(" + color + ",0.7)"
           ]]]
     label:
